--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -1065,7 +1065,7 @@
 @INPROCEEDINGS{FigueiredoLJ97,
 	author = {M{\'a}rio A. T. Figueiredo and Jos{\'e} M. N. Leit{\~a}o and Anil
 	K. Jain},
-	title = {Adaptive B-Splines and Boundary Estimation.},
+	title = {Adaptive {B}-Splines and Boundary Estimation.},
 	booktitle = {CVPR},
 	year = {1997},
 	pages = {724--730}
@@ -1287,7 +1287,7 @@
 	note = {CD-ROM}
 }
 @ARTICLE{Frery97,
-	author = {A. C. Frery and H.J. M{\"u}ller and C. C. F. Yanasse and S. J. S. Sant'Anna},
+	author = {A. C. Frery and H.J. M{\"u}ller and C. C. F. Yanasse and S. J. S. {Sant'Anna}},
 	title = {A model for extremely heterogeneous clutter},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
 	year = {1997},
@@ -4235,7 +4235,7 @@
 }
 @article{Brown1999,
 	author = {Brown, B. M. and Chen, S. X.},
-	title = {Beta-Bernstein Smoothing for Regression Curves with Compact Support},
+	title = {Beta-{B}ernstein Smoothing for Regression Curves with Compact Support},
 	journal = {Scandinavian Journal of Statistics},
 	volume = {26},
 	number = {1},
@@ -4942,7 +4942,7 @@
 	number = "3",
 	pages = "445--463",
 	publisher = "The Institute of Mathematical Statistics",
-	title = "Minimum Hellinger Distance Estimates for Parametric Models",
+	title = "Minimum {H}ellinger Distance Estimates for Parametric Models",
 	url = "https://doi.org/10.1214/aos/1176343842",
 	volume = "5",
 	year = "1977"
@@ -5157,7 +5157,7 @@
 	pages={2016-2019}
 }
 @article{JainSrivastava2007,
-	title={On Symmetric Information Divergence Measures of Csiszar’s f - Divergence Class},
+	title={On Symmetric Information Divergence Measures of {C}sisz\'ar’s f-Divergence Class},
 	author={K. Jain and A. Srivastava},
 	journal={Journal of Applied Mathematics, Statistics and Informatics},
 	year={2007},
@@ -5205,7 +5205,7 @@
 	year = {2002},
 	month = {01},
 	pages = {},
-	title = {Upper and lower bounds for Csiszar f-divergence in terms of Hellinger discrimination and applications},
+	title = {Upper and lower bounds for {C}sisz\'ar f-divergence in terms of {H}ellinger discrimination and applications},
 	journal = {Nonlinear Analysis Forum}
 }
 @book{Hirukawa2018,
@@ -5223,14 +5223,14 @@
 	number = "4",
 	pages = "1041--1067",
 	publisher = "The Institute of Mathematical Statistics",
-	title = "The 1972 Wald Lecture Robust Statistics: A Review",
+	title = "The 1972 {W}ald Lecture Robust Statistics: A Review",
 	url = "https://doi.org/10.1214/aoms/1177692459",
 	volume = "43",
 	year = "1972"
 }
 @article{Eslinger1990,
 	author = {Eslinger, P.  and  Woodward, W. },
-	title = {Minimum hellinger distance estimation for normal models},
+	title = {Minimum {H}ellinger distance estimation for {N}ormal models},
 	journal = {Journal of Statistical Computation and Simulation},
 	volume = {39},
 	number = {1-2},
@@ -5270,7 +5270,7 @@
 	
 }
 @article{FEI2014,
-	title = {Parallel L-BFGS-B algorithm on GPU},
+	title = {Parallel {L-BFGS-B} algorithm on {GPU}},
 	journal = {Computers \& Graphics},
 	volume = {40},
 	pages = {1 - 9},
@@ -5328,7 +5328,7 @@
 }
 @misc{Saocom,
 	author = { Invap-Saocom},
-	title = {Invap en la misión SAOCOM},
+	title = {Invap en la misión {SAOCOM}},
 	year = {},
 	url = {URL{http://saocom.invap.com.ar/}},
 	note = "[Web; accedido el 21-10-2019]",
@@ -5362,8 +5362,8 @@
 	year          = "1994",
 }
 @Article{Shahrezaei2019,
-	AUTHOR = {Heidarpour Shahrezaei, Iman and Kim, Hyun-cheol},
-	TITLE = {Resolutional Analysis of Multiplicative High-Frequency Speckle Noise Based on SAR Spatial De-Speckling Filter Implementation and Selection},
+	AUTHOR = {Heidarpour Shahrezaei, I. and Kim, H.-c.},
+	TITLE = {Resolutional Analysis of Multiplicative High-Frequency Speckle Noise Based on {SAR} Spatial De-Speckling Filter Implementation and Selection},
 	JOURNAL = {Remote Sensing},
 	VOLUME = {11},
 	YEAR = {2019},
@@ -5461,8 +5461,8 @@
 }
 @InProceedings{Buemi2009,
 	author="Buemi, M. 	and Goussies, N. 	and Jacobo, J. 	and Mejail, M.",
-	editor="Bayro-Corrochano, Eduardo and Eklundh, Jan-Olof",
-	title="SAR Image Segmentation Using Level Sets and Region Competition under the  $\mathcal{G}^H$ Model",
+	editor="Bayro-Corrochano, E. and Eklundh, J.-O.",
+	title="{SAR} Image Segmentation Using Level Sets and Region Competition under the  $\mathcal{G}^H$ Model",
 	booktitle="Progress in Pattern Recognition, Image Analysis, Computer Vision, and Applications",
 	year="2009",
 	publisher="Springer Berlin Heidelberg",
@@ -5494,7 +5494,7 @@
 @INPROCEEDINGS{Chan2016,
 	author={D. {Chan} and J. {Cassetti} and A. C. {Frery}},
 	booktitle={2016 IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
-	title={Texture parameter estimation in monopolarized SAR imagery, for the single look case, using extreme value theory},
+	title={Texture parameter estimation in monopolarized {SAR} imagery, for the single look case, using extreme value theory},
 	year={2016},
 	volume={},
 	number={},
@@ -5509,7 +5509,7 @@
 	year={1984}
 }
 @article{scheffe1947,
-	author = "Scheffe, H.",
+	author = "Scheff\'e, H.",
 	doi = "10.1214/aoms/1177730390",
 	fjournal = "The Annals of Mathematical Statistics",
 	journal = "Ann. Math. Statist.",
@@ -5539,7 +5539,7 @@
 }
 @article{Buckland1983,
 	author = {Buckland, S. },
-	title = {Monte Carlo Methods For Confidence Interval Estimation Using The Bootstrap Technique},
+	title = {Monte {C}arlo Methods For Confidence Interval Estimation Using The Bootstrap Technique},
 	journal = {Journal of Applied Statistics},
 	volume = {10},
 	number = {2},
@@ -5595,18 +5595,19 @@
 	doi={10.1109/LGRS.2019.2941075},
 	ISSN={1558-0571},
 	month={},}
+
 @article{kokonendji2018,
-	author = "Kokonendji, Célestin C. and Libengué Dobélé-Kpoka, Francial Giscard B.",
-	fjournal = "African Diaspora Journal of Mathematics. New Series",
-	journal = "Afr. Diaspora J. Math. (N.S.)",
-	number = "1",
-	pages = "87--97",
-	publisher = "Mathematical Research Publishers",
-	title = "Asymptotic Results For Continuous Associated Kernel Estimators of Density Functions",
-	url = "https://projecteuclid.org:443/euclid.adjm/1545361441",
-	volume = "21",
-	year = "2018"
+  author  = {C. C. Kokonendji and F. G. B. {Libengu\'e Dob\'el\'e-Kpoka}},
+journal = {African Diaspora Journal of Mathematics},
+title   = {Asymptotic Results For Continuous Associated Kernel Estimators of Density Functions},
+year    = {2018},
+issn    = {1539-854X},
+number  = {21},
+pages   = {87--97},
+volume  = {1},
+url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 }
+
 @Article{AGeneralizedGaussianCoherentScattererModelforCorrelatedSARTexture,
 	author  = {D.-X. Yue and F. Xu and A. C. Frery and Y.-Q. Jin},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
