A mí me funciona

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -713,7 +713,7 @@
 	timestamp = {2007.03.30}
 }
 @ARTICLE{Correia98,
-	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. S. Sant'Anna},
+	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. S. Sant{U+0027}Anna},
 	title = {A User Friendly Statistical System for Polarimetric {SAR} Image Classification},
 	journal = {Revista de Teledetecci\'on},
 	year = {1998},
@@ -3488,7 +3488,7 @@
 	timestamp = {2012.12.28}
 }
 @ARTICLE{ClassificationPolSARSegmentsMinimizationWishartDistances,
-	author = {W. B. Silva and C. C. Freitas and S. J. S. Sant'Anna and A. C. Frery},
+	author = {W. B. Silva and C. C. Freitas and S. J. S. Sant’Anna and A. C. Frery},
 	title = {Classification of Segments in {PolSAR} Imagery by Minimum Stochastic
 	Distances Between {W}ishart Distributions},
 	journal = {IEEE Journal of Selected Topics in Applied Earth Observations and
@@ -3834,7 +3834,7 @@
 	organization = {France}
 }
 @ARTICLE{5599869,
-	author = {Vemuri, B.C. and Meizhu, L. and Amari, S.-I. and Nielsen, F.},
+	author = {Vemuri, B. C. and Meizhu, L. and Amari, S.-I. and Nielsen, F.},
 	title = {Total {B}regman Divergence and Its Applications to {DTI} Analysis},
 	journal = {IEEE Transactions on Medical Imaging},
 	year = {2011},
