--- a/Source/CorreccionTesis/ApendiceB1.tex
+++ b/Source/CorreccionTesis/ApendiceB1.tex
@@ -6,5 +6,5 @@ Las simulaciones se realizaron utilizando el lenguaje y el entorno \texttt R par
 La función \texttt{adaptIntegrate} del paquete \texttt{cubature} se utilizó para realizar la integración numérica requerida para evaluar la distancia triangular, el algoritmo utilizado es una integración multidimensional adaptativa sobre hipercubos. Para encontrar numéricamente $\widehat\alpha_{\text{LC}}$ utilizamos la función \texttt{uniroot} implementada en \texttt R.
 
 %%% ACF Usar siunitx
-Una parte de las simulaciones se realizó en una plataforma compuesta por un Intel(R) Core i7 con $8$ GB de memoria y $64$ bits  Windows  7. Otra parte se hizo en un equipo similar pero con $16$ GB de memoria RAM.
+Una parte de las simulaciones se realizó en una plataforma compuesta por un Intel(R) Core i7 con $\SI{8}{\giga\byte}$ de memoria y $\SI{64}{\bit}$  Windows  7. Otra parte se hizo en un equipo similar pero con $\SI{16}{\giga\byte}$ de memoria RAM.
 Los códigos y los datos están disponibles a solicitud del autor correspondiente.
