--- a/Source/CorreccionTesis/capitulo3.tex
+++ b/Source/CorreccionTesis/capitulo3.tex
@@ -112,7 +112,7 @@ De acuerdo a \citet{Saocom} el objetivo de la misión SAOCOM es la puesta en ór
 %%% ACF Usar siunitx
 Entre los objetivos de estos satélites se encuentra la medición de la humedad del suelo, detectar derrames de hidrocarburos en el mar y el seguimiento de la cobertura de agua en las inundaciones. Están equipados con tecnología SAR polarimétrica y operan en banda L. La banda L permite penetrar a través de la superficie hasta $\SI{2}{\meter}$ de profundidad dependiendo del tipo de suelo. 
 
-En la tabla~\ref{tabla:SensoresSAR}, y de acuerdo a la información obtenida de \citet{Moreira2013}, se muestran los principales sensores SAR junto con el período, banda y polarización (que será explicado en la sección~\ref{polarización}) y las instituciones/países que lo desarrollaron. 
+En la tabla~\ref{tabla:SensoresSAR}, y de acuerdo a la información obtenida de \citet{Moreira2013}, se muestran los principales sensores SAR junto con sus plataformas, el período, banda y polarización (que será explicado en la sección~\ref{polarización}) y las instituciones/países que lo desarrollaron. 
 
 %%% ACF Poner los países en castellano
 %%% ACF Fijate bien si estás informando el sensor, o el sensor y la plataforma
@@ -151,7 +151,7 @@ En la tabla~\ref{tabla:SensoresSAR}, y de acuerdo a la información obtenida de 
 			\bottomrule
 		\end{tabular}
 	\end{spacing}
-	\caption{Descripción de algunos sensores SAR junto con sus características. Adaptado de \citet{Moreira2013}.}\label{tabla:SensoresSAR}
+	\caption{Descripción de algunos sensores/plataformas SAR junto con sus características. Adaptado de \citet{Moreira2013}.}\label{tabla:SensoresSAR}
 \end{table}
 
 \section{Sistema de iluminación coherente}
