--- a/Source/CorreccionTesis/capitulo4.tex
+++ b/Source/CorreccionTesis/capitulo4.tex
@@ -206,7 +206,7 @@ donde las distribuciones $\Gamma^{-1}$ e  $IG$ están definidas por:
 	f_{\text X}(x)=\dfrac{\beta^{\alpha}}{\Gamma(\alpha)} x^{-\alpha-1} \ \ e^{- \frac{\beta}{x}}, \text{ para } x>0.
 	\end{align}
 \end{definition}
-
+\vspace{2mm}
 \begin{definition}
 	\label{InversaGaussiana}
 	Una variable aleatoria $X$ tiene una distribución gaussiana inversa de parámetros $\mu, \lambda >0$  y se indicará $IG(\mu,\tau)$ si su función de densidad viene dada por
@@ -215,7 +215,7 @@ donde las distribuciones $\Gamma^{-1}$ e  $IG$ están definidas por:
 	f_{\text X}(x)=\sqrt{\dfrac{\tau}{2 \pi x^3}} \ \ e^{- \dfrac{\tau (x-\mu)^2}{2 \mu^2 x}}, \text{ para } x>0.
 	\end{align}
 \end{definition}
-
+\vspace{2mm}
 \begin{remark} \ 
 	\begin{itemize}
 		\item La distribución $IG(\mu,\tau)$ es un caso particular de la distribución gaussiana inversa generalizada $N^{-1}(\alpha,\gamma,\lambda)$. Si consideramos $\alpha=-\dfrac{1}{2}$, $\gamma=\sqrt{\dfrac{\tau}{2}}$ y $\lambda=\dfrac{\tau}{2\mu^2}$ en la ecuación~\eqref{GIG} se obtiene la ecuación~\eqref{IG}.
