--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -23,7 +23,7 @@
 \usepackage[spanish]{babel}
 \usepackage{amsthm}
 \usepackage{multicol}
-\usepackage[sc]{mathpazo}
+%\usepackage[sc]{mathpazo}
 \usepackage{mathrsfs}
 \usepackage{subfigure}
 \usepackage{filecontents}
