--- a/Source/CorreccionTesis/gracias.tex
+++ b/Source/CorreccionTesis/gracias.tex
@@ -11,7 +11,7 @@
 
 Quiero agradecer especialmente a mi director Dr.\ Alejandro C.\ Frery por su apoyo permanente, su estímulo y su presencia constante a lo largo de estos años. 
 
-A mis amigos Fer y Lía, Pablo y Lore por estar en mi vida y acompañarme en este camino.
+A mis queridos amigos Fer y Lía, Pablo y Lore y a Pablito y Maylen por estar en mi vida y acompañarme en este camino y en la vida.
 
 A mi amiga Lore por esas caminatas de los viernes que tanto bien me hicieron y me hacen al alma.
 
@@ -19,7 +19,7 @@ A mis amigos Nino y Cristina por compartir la vida y especialmente por estar pre
 
 A mis amigos Michel y Alejandra que desde el país vecino siempre estuvieron a mi lado.
 
-A mi amigo Pablo por permitirme tomar una licencia.
+A mi amigo Pablo por los gratos momentos vividos y por permitirme tomar una licencia.
 
 A mi compañero de docencia y amigo Gustavo, que tanta catarsis hemos hecho durante este recorrido.
 
@@ -29,4 +29,4 @@ A mi hermana querida por estar siempre.
 
 A mis padres que hubiesen estado muy felices por este logro en mi vida.
 
-Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots\ tanto por decir.
+Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots tanto por decir.
