--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -4953,7 +4953,7 @@
 @INPROCEEDINGS{Chan2017,
 	author={D. {Chan} and A. {Rey} and J. {Gambini} and J. {Cassetti} and A. C. {Frery}},
 	booktitle={2017 IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
-	title={Methods and frameworks for sampling GI0 data},
+	title={Methods and frameworks for sampling $\mathcal{G}_{I}^0$ data},
 	year={2017},
 	volume={},
 	number={},
