Usá este bibtex

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -710,7 +710,7 @@
 	timestamp = {2007.03.30}
 }
 @ARTICLE{Correia98,
-	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. S. Sant'Anna},
+	author = {A. H. Correia and C. C. Freitas and A. C. Frery and S. J. S. Sant’Anna},
 	title = {A User Friendly Statistical System for Polarimetric {SAR} Image Classification},
 	journal = {Revista de Teledetecci\'on},
 	year = {1998},
@@ -940,7 +940,7 @@
 	publisher = {INPE},
 	year = {1993},
 	author = {Dutra, L. V. and Frery, A. C. and T. Krug and N. D. A. Mascarenhas
-	and S. J. S. Sant'Anna and Yanasse, C. C. F.},
+	and S. J. S. Sant’Anna and Yanasse, C. C. F.},
 	address = {S\~ao Jos\'e dos Campos, SP, Brazil},
 	note = {Notas de curso do Simp\'osio Brasileiro de Sensoriamento Remoto,
 	7.}
@@ -1132,7 +1132,7 @@
 	address = {Reading, MA, USA}
 }
 @INPROCEEDINGS{correiasantos,
-	author = {Freitas, C. C. and Correia, A. and Frery, A. C. and Sant'Anna, S.
+	author = {Freitas, C. C. and Correia, A. and Frery, A. C. and Sant’Anna, S.
 	J. S.},
 	title = {A System for Multilook Polarimetric {SAR} Image Statistical Classification},
 	booktitle = {Second Latinoamerican Seminar on Radar Remote Sensing: Image Processing
@@ -1264,7 +1264,7 @@
 	doi = {10.1080/01431160802448919}
 }
 @ARTICLE{freryun99,
-	author = {A. C. Frery and C. C. Freitas and S. J. S. Sant'Anna and C. D. Renn{\'o}},
+	author = {A. C. Frery and C. C. Freitas and S. J. S. Sant’Anna and C. D. Renn{\'o}},
 	title = {Statistical Properties of {SAR} Data and their Consequences},
 	journal = {Seminars of the United Nations Programme on Space Applications},
 	year = {1999},
@@ -1272,7 +1272,7 @@
 	pages = {53--62}
 }
 @INPROCEEDINGS{freryluccaigarss99,
-	author = {A. C. Frery and E. D. V. Lucca and C. C. Freitas and S. J. S. Sant'Anna},
+	author = {A. C. Frery and E. D. V. Lucca and C. C. Freitas and S. J. S. Sant’Anna},
 	title = {{SAR} Segmentation Algorithms: A Quantitative Assessment},
 	booktitle = {International Geoscience and Remote Sensing Symposium: Remote Sensing
 	of the System Earth -- A Challenge for the 21st Century},
@@ -1284,7 +1284,7 @@
 	note = {CD-ROM}
 }
 @ARTICLE{Frery97,
-	author = {A. C. Frery and H. J. M{\"u}ller and C. C. F. Yanasse and S. J. S. {Sant'Anna}},
+	author = {A. C. Frery and H. J. M{\"u}ller and C. C. F. Yanasse and S. J. S. {Sant’Anna}},
 	title = {A model for extremely heterogeneous clutter},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
 	year = {1997},
@@ -1293,7 +1293,7 @@
 	number = {3}
 }
 @INPROCEEDINGS{frerycuritiba93,
-	author = {Frery, A. C. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Sant’Anna, S. J. S.},
 	title = {Redu\c c\~ao de Ru\'{\i}do Em Imagens {SAR} Pelo Uso de Filtros Robustos},
 	booktitle = {Simp\'osio Brasileiro de Sensoriamento Remoto, 7.},
 	year = {1993},
@@ -1303,7 +1303,7 @@
 	publisher = {INPE}
 }
 @INPROCEEDINGS{freryrecife93,
-	author = {Frery, A. C. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Sant’Anna, S. J. S.},
 	title = {Non-adaptive robust filters for speckle noise reduction},
 	booktitle = {Simp\'osio Brasileiro de Computa\c c\~ao Gr\'afica e Processamento
 	de Imagens, 6.},
@@ -1313,7 +1313,7 @@
 	publisher = {SBC/UFPE}
 }
 @ARTICLE{asp98,
-	author = {Frery, A. C. and Sant'Anna, S. J. S. and Mascarenhas, N. D. A. and
+	author = {Frery, A. C. and Sant’Anna, S. J. S. and Mascarenhas, N. D. A. and
 	Bustos, O. H.},
 	title = {Robust inference techniques for speckle noise reduction in 1-look
 	amplitude {SAR} images},
@@ -1323,7 +1323,7 @@
 	pages = {61--76}
 }
 @INPROCEEDINGS{florence,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Yanasse, C. C. F. and Sant’Anna, S. J. S.},
 	title = {Alternative distributions for the multiplicative model in {SAR} images},
 	booktitle = {Quantitative remote sensing for science and applications},
 	year = {1995},
@@ -1334,7 +1334,7 @@
 	note = {IGARSS'95 Proc.}
 }
 @INPROCEEDINGS{mexico,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Sant'Anna, S. J. S.},
+	author = {Frery, A. C. and Yanasse, C. C. F. and Sant’Anna, S. J. S.},
 	title = {Statistical characterization of {SAR} data: the multiplicative model
 	and extensions},
 	booktitle = {Latinoam\'erica evaluada desde el espacio},
@@ -1345,7 +1345,7 @@
 	organization = {SELPER}
 }
 @INPROCEEDINGS{eupedroetal97,
-	author = {Frery, A. C. and Yanasse, C. C. F. and Vieira, P. R. and Sant'Anna,
+	author = {Frery, A. C. and Yanasse, C. C. F. and Vieira, P. R. and Sant’Anna,
 	S. J. S. and Renn{\'o}, C. D.},
 	title = {A user-friendly system for synthetic aperture radar image classification
 	based on grayscale distributional properties and context},
@@ -2211,7 +2211,7 @@
 }
 
 @INPROCEEDINGS{luccasantos,
-	author = {E. V. D. Lucca and Freitas, C. C. and Frery, A. C. and Sant'Anna,
+	author = {E. V. D. Lucca and Freitas, C. C. and Frery, A. C. and Sant’Anna,
 	S. J. S.},
 	title = {Comparison of {{SAR}} segmentation algorithms},
 	booktitle = {Second Latinoamerican Seminar on Radar Remote Sensing: Image Processing
@@ -3159,7 +3159,7 @@
 	number = {1}
 }
 @INPROCEEDINGS{frerycorreiaigarss99,
-	author = {Sant'{A}nna, S. J. S. and Correia, A. H. and Freitas, C. C. and Frery,
+	author = {Sant’{A}nna, S. J. S. and Correia, A. H. and Freitas, C. C. and Frery,
 	A. C.},
 	title = {The Discriminatory Capability of Polarimetric {{SAR}} Data for Land
 	Use Classification},
@@ -3173,7 +3173,7 @@
 	note = {CD-ROM}
 }
 @MASTERSTHESIS{sid95,
-	author = {Sant'Anna, S. J. S.},
+	author = {Sant’Anna, S. J. S.},
 	title = {Avalia\c c\~ao do desempenho de filtros redutores de ``speckle''
 	em imagens de radar de abertura sint\'etica},
 	school = {Instituto Nacional de Pesquisas Espaciais},
@@ -3430,7 +3430,7 @@
 	timestamp = {2012.12.28}
 }
 @ARTICLE{ClassificationPolSARSegmentsMinimizationWishartDistances,
-	author = {W. B. Silva and C. C. Freitas and S. J. S. {Sant'Anna} and A. C. Frery},
+	author = {W. B. Silva and C. C. Freitas and S. J. S. {Sant’Anna} and A. C. Frery},
 	title = {Classification of Segments in {PolSAR} Imagery by Minimum Stochastic
 	Distances Between {W}ishart Distributions},
 	journal = {IEEE Journal of Selected Topics in Applied Earth Observations and
@@ -3471,7 +3471,7 @@
 	Polarimetry, Wishart distribution}
 }
 @INPROCEEDINGS{6049821,
-	author = {Silva, W. B. and Pereira, L. O. and Sant'Anna, S. J. S. and Freitas,
+	author = {Silva, W. B. and Pereira, L. O. and Sant’Anna, S. J. S. and Freitas,
 	C. C. and Guimaraes, R. J. P. S. and Frery, A. C.},
 	title = {Land cover discrimination at {B}razilian {A}mazon using region based
 	classifier and stochastic distance},
@@ -3913,7 +3913,7 @@
 	address = {Sheffield, UK}
 }
 @TECHREPORT{yanas95,
-	author = {Yanasse, C. C. F. and Frery, A. C. and Sant'Anna, S. J. S.},
+	author = {Yanasse, C. C. F. and Frery, A. C. and Sant’Anna, S. J. S.},
 	title = {Stochastic distributions and the multiplicative model: relations,
 	properties, estimators and applications to {SAR} image analysis},
 	institution = {INPE},
@@ -3922,7 +3922,7 @@
 	address = {S\~ao Jos\'e dos Campos, SP, Brazil}
 }
 @INPROCEEDINGS{Yanasse93,
-	author = {Yanasse, C. C. F. and Frery, A. C. and Sant'Anna, S. J. S. and Hernandez,
+	author = {Yanasse, C. C. F. and Frery, A. C. and Sant’Anna, S. J. S. and Hernandez,
 	P. F. and Dutra, L. V.},
 	title = {Statistical analysis of {SAREX} data over {T}apaj{\'o}s - {B}razil},
 	booktitle = {SAREX-92: South American Radar Experiment},
@@ -3942,7 +3942,7 @@
 	pages = {493--507}
 }
 @ARTICLE{yanarsoe96,
-	author = {Yanasse, C. C. F. and Sant'Anna, S. J. S. and Frery, A. C. and Renn{\'o},
+	author = {Yanasse, C. C. F. and Sant’Anna, S. J. S. and Frery, A. C. and Renn{\'o},
 	C. D. and Soares, J. V. and Luckman, A. J.},
 	title = {Exploratory study of the relationship between tropical forest regeneration
 	stages and {SIR-C} {L} and {C} data},
@@ -5502,7 +5502,7 @@
 	month={Sep.},}
 
 @Article{Carvalho2019,
-	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and Siqueira Sant'Anna, S.},
+	AUTHOR = {Carvalho, N. and Sant’Anna Bins, L. and Siqueira Sant’Anna, S.},
 	TITLE = {Analysis of Stochastic Distances and {W}ishart Mixture Models Applied on {PolSAR} Images},
 	JOURNAL = {Remote Sensing},
 	VOLUME = {11},
