--- a/Source/CorreccionTesis/ApendiceA1.tex
+++ b/Source/CorreccionTesis/ApendiceA1.tex
@@ -1,8 +1,11 @@
 \chapter{Algunas demostraciones}
 
-\subsection{Expresiones para $b_{\small{\text{LN}}}^*$ y $\textbf{Mise}_{\small{\text{LN}}}^*$~\eqref{MISEoptLN}.}
+\section*{Expresiones para $b_{\small{\text{LN}}}^*$ y $\text{Mise}_{\small{\text{LN}}}^*$}
 \label{byMiseOptLN}
 %%% ACF Yo creo que habías definido B(X) como el sesgo de X.
+
+\noindent En esta sección a deducir las expresiones de  $b_{\small{\text{LN}}}^*$ y $\text{Mise}_{\small{\text{LN}}}^*$ presentadas en~\eqref{MISEoptLN}.
+
 \begin{dem}
 	De acuerdo a~\cite{Libnegue2013} expresiones para el sesgo, la varianza de $\widehat{f}_n$ para le caso de núcleo LN son:
 	\begin{align}
