--- a/Source/CorreccionTesis/ApendiceB1.tex
+++ b/Source/CorreccionTesis/ApendiceB1.tex
@@ -8,3 +8,7 @@ La función \texttt{adaptIntegrate} del paquete \texttt{cubature} se utilizó pa
 %%% ACF Usar siunitx
 Una parte de las simulaciones se realizó en una plataforma compuesta por un Intel(R) Core i7 con $\SI{8}{\giga\byte}$ de memoria y $\SI{64}{\bit}$  Windows  7. Otra parte se hizo en un equipo similar pero con $\SI{16}{\giga\byte}$ de memoria RAM.
 Los códigos y los datos están disponibles a solicitud del autor correspondiente.
+
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
