--- a/Source/CorreccionTesis/capitulo1.tex
+++ b/Source/CorreccionTesis/capitulo1.tex
@@ -1,5 +1,11 @@
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
+
+
 \chapter{Resumen}
 %%% ACF Acá hablás de G_0 y de G_I^0. Sugiero que unifiques todo a G^0
+\pagenumbering{arabic}
 
 Las imágenes obtenidas con dispositivos que poseen iluminación coherente como lo son el ultrasonido, laser o radar de apertura sintética, son afectadas por la presencia de un ruido que es inherente al proceso de captura de la imagen, llamado ruido speckle. Este ruido se aparta de las hipótesis clásicas ya que no es gaussiano, no es aditivo y es difícil de eliminar. 
 
