--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -109,3 +109,6 @@ Esta tesis está organizada de la siguiente manera:
 	\item En el capítlo~\ref{Conclusiones} se presentan las conclusiones finales de este trabajo.
 	
 \end{itemize}
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
