--- a/Source/CorreccionTesis/capitulo4.tex
+++ b/Source/CorreccionTesis/capitulo4.tex
@@ -4,6 +4,11 @@
 %% Recuerda que aqu'i ya puedes escribir acentos como: 'a, 'e, 'i, etc.
 %% La letra n con tilde es: 'n.
 
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
+
+
 \chapter{El Modelo $\mathcal{G}^0$}
 \label{modeloG0}
 
