--- a/Source/CorreccionTesis/capitulo6.tex
+++ b/Source/CorreccionTesis/capitulo6.tex
@@ -4,6 +4,11 @@
 %% Recuerda que aqu'i ya puedes escribir acentos como: 'a, 'e, 'i, etc.
 %% La letra n con tilde es: 'n.
 
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
+
+
 \chapter{Simulaciones y aplicación a una imagen real}
 \label{ResultadosEmpiricos}
 
@@ -50,7 +55,7 @@ Luego, para generar una muestra $Z_1, \ldots, Z_n$ de variables aleatorias indep
 	\item Obtenemos $Z \sim \mathcal{G}_I^0(\alpha,\gamma,L)$ definiendo $Z=X \cdot Y$.
 \end{itemize}
 %\citet{SamplingfromtheGI0Distribution2018} han estudiado diversas técnicas de simulación en varias plataformas computacionales.
-\citet{Chan2017} han estudiado diversas técnicas de simulación en varias plataformas computacionales
+\citet{Chan2017,SamplingfromtheGI0Distribution2018} discuten diversas técnicas de simulación en varias plataformas computacionales, aprovechando la relación que existe entre la distribución $\mathcal{G}_I^0$ y otras distribuciones, para el caso $L=1$.
 
 \section{Eligiendo distancias estocásticas}
 \label{EligiendoDistancias}
