--- a/Source/CorreccionTesis/gracias.tex
+++ b/Source/CorreccionTesis/gracias.tex
@@ -11,7 +11,7 @@
 
 Quiero agradecer especialmente a mi director Dr.\ Alejandro C.\ Frery por su apoyo permanente, su estímulo y su presencia constante a lo largo de estos años. 
 
-A mis queridos amigos Fer y Lía, Pablo y Lore y a Pablito y Maylen por estar en mi vida y acompañarme en este camino y en la vida.
+A mis queridos amigos Fer y Lía, Pablo y Lore, y a Pablito y Maylen por estar y acompañarme en este camino y en la vida.
 
 A mi amiga Lore por esas caminatas de los viernes que tanto bien me hicieron y me hacen al alma.
 
@@ -27,6 +27,12 @@ A mis compañeros de oficina Eda y Roberto por acompañarme en este proceso.
 
 A mi hermana querida por estar siempre.
 
+A mi prima Susy por acompañarme siempre.
+
 A mis padres que hubiesen estado muy felices por este logro en mi vida.
 
 Finalmente quiero agradecer profundamente a mi marido Tico, por su presencia constante, su apoyo incondicional, su tiempo dedicado, su amor, por confiar y creer en mí y por\dots tanto por decir.
+
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
