--- a/Source/CorreccionTesis/titlepage.tex
+++ b/Source/CorreccionTesis/titlepage.tex
@@ -38,7 +38,7 @@
 %%   \insertsubmitdate
 \vspace{-3cm}
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.pdf}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
 \end{flushright}
 
 \begin{titlepage}
@@ -76,9 +76,14 @@
 \TitleBlock{\scshape {\large Director: Dr. Alejandro Frery Orgambide}}
 \vspace{1.5cm}
 
-\TitleBlock{Diciembre 2019}
+\TitleBlock{Febrero 2020}
   %\TitleBlock[\bigskip]{\insertdepartment}
+  \newpage
 \end{titlepage}
+\newpage
+$\ $
+\thispagestyle{empty} % para que no se numere esta pagina
+
 
 %% Nota 1:
 %% Se puede agregar un escudo o logotipo en un "Block" como:
