--- a/Source/CorreccionTesis/formulario_E_Julia.tex
+++ b/Source/CorreccionTesis/formulario_E_Julia.tex
@@ -1,75 +1,116 @@
+\pagenumbering{Roman}
+
+\begin{flushright}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+\end{flushright}
+
+	\begin{center}
+		\textbf{DOCTORADO EN CIENCIA Y TECNOLOGIA}\vspace{-3mm}\\
+		\hrulefill\\
+		{\small {Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}}
+	\end{center}
+\vspace{2mm}
+\begin{center}
+	\textbf{FORMULARIO “E”} \\
+	\textbf{TESIS DE POSGRADO}
+\end{center}
+\bigskip
 \noindent Niveles de acceso al documento autorizados por el autor.
 
-El autor de la tesis puede elegir entre las siguientes posibilidades para autorizar  a la UNGS a difundir el contenido de la tesis: \underline{a}
+\textbf{El autor de la tesis puede elegir entre las siguientes posibilidades para autorizar  a la UNGS a difundir el contenido de la tesis: \underline{a}}
 %\renewcommand{\labelenumi}{\alph{enumi})} \textit{
 \begin{enumerate}[a)]
-	\item \underline{Liberar el contenido de la tesis para acceso público.}
-	\item Liberar el contenido de la tesis solamente a la comunidad universitaria de la UNGS.
-	\item Retener el contenido de la tesis por motivos de patentes, publicación y/o derechos de autor por un lapso de cinco años. 
+	\item \textit{\underline{Liberar el contenido de la tesis para acceso público.}}
+	\item \textit{Liberar el contenido de la tesis solamente a la comunidad universitaria de la UNGS.}
+	\item \textit{Retener el contenido de la tesis por motivos de patentes, publicación y/o derechos de autor por un lapso de cinco años.}
 \end{enumerate}
 
-\begin{enumerate}
-	\item Título completo del trabajo de Tesis: Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos.
+\bigskip
+\begin{enumerate}[a)]
+	\item Título completo del trabajo de Tesis: \\
+	\textbf{Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos}
 	
-	\item Presentado por (Apellido/s y Nombres completos del autor): Cassetti, Julia Analía.
+	\item Presentado por (Apellido/s y Nombres completos del autor): \\
+	\textbf{Cassetti, Julia Analía}
 	
-	\item E-mail del autor: julia.cassetti@gmail.com.
+	\item E-mail del autor: \\
+	\textbf{julia.cassetti@gmail.com}
 	
-	\item Estudiante del Posgrado (consignar el nombre completo del Posgrado): Doctorado en Ciencia y Tecnología.
+	\item Estudiante del Posgrado (consignar el nombre completo del Posgrado): 
+	\textbf{Doctorado en Ciencia y Tecnología}
 	
 	\item Institución o Instituciones que dictaron el Posgrado (consignar los nombres
-	desarrollados y completos): Universidad Nacional de General Sarmiento.
+	desarrollados y completos): \\
+	\textbf{Universidad Nacional de General Sarmiento}
 	
 	\item Para recibir el título de (consignar completo):
 	
 	\begin{enumerate}%[leftmargin=25.00003pt,labelsep=5pt]
-		\item Grado académico que se obtiene: Doctor.
-		\item Nombre del grado académico: Doctor en Ciencia y Tecnología.
+		\item Grado académico que se obtiene: \\
+		\textbf{Doctor}
+		\item Nombre del grado académico: \\
+		\textbf{Doctor en Ciencia y Tecnología}
 	\end{enumerate}
 	
-	\item Fecha de la defensa: día / mes / año %(andá a buscarla al ángulo)
+	\item Fecha de la defensa:   \qquad  / \qquad / \quad   
+	 
+	\qquad \qquad \qquad \qquad \quad día / mes / año
 	
-	\item Director de la Tesis (Apellidos y Nombres): Frery Orgambide, Alejandro César.
+	\item Director de la Tesis (Apellidos y Nombres): \\
+	\textbf{Frery Orgambide, Alejandro César}
 	
-	\item Tutor de la Tesis (Apellidos y Nombres): Borgna, Juan Pablo.
+	\item Tutor de la Tesis (Apellidos y Nombres): \\
+	\textbf{Borgna, Juan Pablo}
 	
 	\item Colaboradores con el trabajo de Tesis: 
 	
 	\item Descripción física del trabajo de Tesis (cantidad total de páginas, imágenes, planos, videos, archivos digitales, etc.):
 	\begin{itemize}%[leftmargin=25.00003pt,labelsep=5pt]
-		\item 154 páginas;
+		\item 171 páginas;
 		\item 13 tablas;
 		\item 61 figuras.
 	\end{itemize}
 	
-	\item Alcance geográfico y/o temporal de la Tesis: El alcance geográfico de la tesis es internacional.
+	\item Alcance geográfico y/o temporal de la Tesis: \\
+	\textbf{El alcance geográfico de la tesis es internacional.}
 	
-	\item Temas tratados en la Tesis (palabras claves): Estimación de parámetros, Sensores Remotos, Imágenes SAR, Núcleos asimétricos, Distancias estocásticas, Estimadores de mínima distancia, Speckle.
+	\item Temas tratados en la Tesis (palabras claves): \\
+	\textbf{Estimación de parámetros, Sensores Remotos, Imágenes SAR, Núcleos asimétricos, Distancias estocásticas, Estimadores de mínima distancia, Speckle.}
 	
 	\item Resumen en español (hasta 1000 caracteres): 
 	
-	Resumen
+	\textbf{Resumen}
 	
 	El modelo $\mathcal{G}^0$ es una buena elección para explicar las características estadísticas de datos que provienen de imágenes de radar de apertura sintética (SAR), porque bajo este modelo se pueden caracterizar regiones con diferentes grado de textura a través de sus parámetros.  Esta tesis propone una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G^0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica, y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados utilizando núcleos asimétricos. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el Método de Momentos, Máxima Verosimilitud y Logcumulantes. Además se estudiarán propiedades de convergencia, como así también la robustez de los mismos bajo contaminación. 
 	
 	
 	\item Resumen en portugués (hasta 1000 caracteres):
 	
-	Resumo
+	\textbf{Resumo}
 	
 	O modelo $ \mathcal {G}^0$ é uma boa opção para explicar as características estatísticas dos dados provenientes de imagens de radar de abertura sintética (SAR), porque nesse modelo regiões com diferentes graus de textura podem ser caracterizadas através de seus parâmetros. Esta tese propõe uma nova estratégia para a estimativa do parâmetro de textura do modelo $\mathcal{G}^0$ para dados de intensidade, através da minimização de distâncias estocásticas entre a função de densidade teórica e uma estimativa não paramétrica da função de densidade. subjacente que vem dos dados observados usando núcleos assimétricos. O desempenho desses estimadores será comparado, em termos de viés e erro médio quadrático, aos obtidos pelo Método dos Momentos, Máxima Verossimilhança e Logcumulantes. Além disso, serão estudadas propriedades de convergência, bem como sua robustez sob contaminação.
 	
 	\item Resumen en inglés (hasta 1000 caracteres):
 	
-	Abstract
+	\textbf{Abstract}
 	
 	The $\mathcal{G}^0$ model is a good choice to explain the statistical characteristics of data that come from synthetic aperture radar (SAR) images, because under this model, areas with different degrees of texture can be characterized through their parameters. This thesis proposes a new strategy for the estimation of the texture parameter of the $\mathcal G^0 $ model for intensity data, through the minimization of stochastic distances between the theoretical density function, and a non-parametric estimation of the underlying density function that comes from the observed data using asymmetric kernels. The performance of these estimators will be compared, in terms of bias and mean square error, with those obtained by the Method of Moments, Maximum Likelihood and Logcumulantes. In addition, convergence properties will be studied, as well as their robustness under contamination.
 	
 	\item Aprobado por (Apellidos y Nombres del Jurado):
+%	
+%		\begin{itemize}
+%		\item Dra. Alejandra Figliola
+%		\medskip
+%		\item Dra. Mariela Sued
+%		\medskip
+%		\item Dra. Patrica Giménez
+%	\end{itemize}	
 	
 	\bigskip\bigskip\bigskip\bigskip
 	
-	Firma y aclaración de la firma del Presidente del Jurado:				
+	Firma y aclaración de la firma del Presidente del Jurado:			
+	
+
 	
 	\bigskip\bigskip\bigskip\bigskip
 	
@@ -78,6 +119,66 @@ El autor de la tesis puede elegir entre las siguientes posibilidades para autori
 \end{enumerate}
 
 \newpage
+%% ## Construye tu propia portada ##
+%% 
+%% Una portada se conforma por una secuencia de "Blocks" que incluyen
+%% piezas individuales de informaci'on. Un "Block" puede incluir, por
+%% ejemplo, el t'itulo del documento, una im'agen (logotipo de la universidad),
+%% el nombre del autor, nombre del supervisor, u cualquier otra pieza de
+%% informaci'on.
+%%
+%% Cada "Block" aparece centrado horizontalmente en la p'agina y,
+%% verticalmente, todos los "Blocks" se distruyen de manera uniforme 
+%% a lo largo de p'agina.
+%%
+%% Nota tambi'en que, dentro de un mismo "Block" se pueden cortar
+%% lineas usando el comando \\
+%%
+%% El tama'no del texto dentro de un "Block" se puede modificar usando uno de
+%% los comandos:
+%%   \small      \LARGE
+%%   \large      \huge
+%%   \Large      \Huge
+%%
+%% Y el tipo de letra se puede modificar usando:
+%%   \bfseries - negritas
+%%   \itshape  - it'alicas
+%%   \scshape  - small caps
+%%   \slshape  - slanted
+%%   \sffamily - sans serif
+%%
+%% Para producir plantillas generales, la informaci'on que ha sido inclu'ida
+%% en el archivo principal "tesis.tex" se puede accesar aqu'i usando:
+%%   \insertauthor
+%%   \inserttitle
+%%   \insertsupervisor
+%%   \insertinstitution
+%%   \insertdegree
+%%   \insertfaculty
+%%   \insertdepartment
+%%   \insertsubmitdate
+\vspace{-3cm}
+\begin{flushright}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+\end{flushright}
+
+	\begin{center}
+		\textbf{DOCTORADO EN CIENCIA Y TECNOLOGIA}\vspace{-3mm}\\
+		\hrulefill\\
+		{\small Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}
+	\end{center}
+	
+	\vspace{1cm}
+	
+	%\pagenumbering{gobble}
+	\noindent\makebox[\linewidth]{\rule{15 cm}{1.5pt}}
+	\begin{center}
+		\textbf{{\LARGE Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos}}
+	\end{center}
+	\noindent\makebox[\linewidth]{\rule{15 cm}{1.5pt}}
+	
+	\vspace{1cm}
+
 
 \textbf{Publicaciones:}
 \begin{itemize}
@@ -104,7 +205,20 @@ El autor de la tesis puede elegir entre las siguientes posibilidades para autori
 	\item IV Workshop en Ecuaciones de la Física Matemática  - \emph{Estimación del parámetro de textura de la distribución $\mathcal{G}_I^0$} - J. Cassetti, A. Frery, Universidad Nacional de General Sarmiento - Los Polvorines - Argentina - 2015. Presentación oral - Expositor.
 	\item XVIII Conference on Nonequilibrium Statistical Mechanics and Nonlinear Physics - Medyfinol- \emph{Texture Analysis in SAR Imagery using the $\mathcal{G}_I^0$ Distribution}  - J. Gambini,  M. Lucini, J. Cassetti, A. Frery - Maceió  - Brasil - Poster - 2014.
 \end{itemize}
-\newpage
+
+
+%\newpage
+%\begin{flushright}
+%	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+%\end{flushright}
+%
+%\begin{center}
+%	\textbf{DOCTORADO EN CIENCIA Y TECNOLOGIA}\vspace{-3mm}\\
+%	\hrulefill\\
+%	{\small Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}
+%\end{center}
+%
+\vspace{1cm}
 
 \textbf{Aportes Originales}:\\
 \emph{(Especificar cuales son los aportes originales o innovadores conseguidos en la realización de esta tesis. Indicar donde se encuentran. Máximo una carilla)}
@@ -120,12 +234,10 @@ El aporte de la propuesta es:
 	\item utilizar distancias estocásticas y núcleos asimétricos para la función de densidad subyacente
 \end{itemize} 
 
- Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación.
-
-En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
+ Se analiza el desempeño del estimador propuesto especialmente para el caso de muestras de pequeño tamaño ya que es de interés en el procesamiento de imágenes SAR. Este análisis se realizó para diferentes combinaciones de valores de los parámetros, tamaños de muestra y niveles de procesamiento comparando su performance con los estimadores clásicos que existen en la literatura. Se estudió también la performance del estimador frente a diferentes escenarios de contaminación y se aplica el estimador propuesto en esta tesis a una imagen real.
 
 En el capítulo~\ref{ResultadosTeoricos} se prueba que el estimador propuesto es fuertemente consistente del parámetro de textura.
-En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
-
-En el capítulo~\ref{ResultadosTeoricos} se prueba que el estimador propuesto es fuertemente consistente del parámetro de textura.
-	
+%En el capítulo~\ref{modeloG0} subsección~\ref{AplicacionImagenReal} se aplica el estimador propuesto en esta tesis a una imagen real.
+%
+%En el capítulo~\ref{ResultadosTeoricos} se prueba que el estimador propuesto es fuertemente consistente del parámetro de textura.
+%	
