Arreglé la llamada al logo

--- a/Source/CorreccionTesis/titlepage.tex
+++ b/Source/CorreccionTesis/titlepage.tex
@@ -38,7 +38,7 @@
 %%   \insertsubmitdate
 \vspace{-3cm}
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUNGS.pdf}
 \end{flushright}
 
 \begin{titlepage}
