--- a/Source/CorreccionTesis/formulario_E_Julia.tex
+++ b/Source/CorreccionTesis/formulario_E_Julia.tex
@@ -1,7 +1,7 @@
 \pagenumbering{Roman}
 
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUNGS.pdf}
 \end{flushright}
 
 	\begin{center}
@@ -159,11 +159,11 @@
 %%   \insertsubmitdate
 \vspace{-3cm}
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs2.pdf}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUNGS.pdf}
 \end{flushright}
 
 	\begin{center}
-		\textbf{DOCTORADO EN CIENCIA Y TECNOLOGIA}\vspace{-3mm}\\
+		\textbf{DOCTORADO EN CIENCIA Y TECNOLOGÍA}\vspace{-3mm}\\
 		\hrulefill\\
 		{\small Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}
 	\end{center}
